--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.4.0",
     "@astrojs/check": "^0.5.4",
-    "typescript": "^5.3.3"
+    "astro": "^4.4.0",
+    "force-graph": "^1.43.5",
+    "ky": "^1.2.0",
+    "neo4j-driver": "^5.17.0",
+    "openai": "^4.28.0",
+    "typescript": "^5.3.3",
+    "zod": "^3.22.4",
+    "zod-to-json-schema": "^3.22.4"
   }
 }
