--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.4",
+    "@astrojs/vercel": "^7.3.1",
     "astro": "^4.4.0",
     "force-graph": "^1.43.5",
     "ky": "^1.2.0",
