--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.4",
+    "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.1",
     "astro": "^4.4.0",
+    "copy-to-clipboard": "^3.3.3",
     "force-graph": "^1.43.5",
     "ky": "^1.2.0",
     "neo4j-driver": "^5.17.0",
     "openai": "^4.28.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.4"
+  },
+  "devDependencies": {
+    "daisyui": "^4.7.2"
   }
 }
