--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.1",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.4.0",
     "copy-to-clipboard": "^3.3.3",
     "force-graph": "^1.43.5",
