--- a/package.json
+++ b/package.json
@@ -11,20 +11,29 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.4",
+    "@astrojs/react": "^3.0.10",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.1",
+    "@types/react": "^18.2.58",
+    "@types/react-dom": "^18.2.19",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.4.0",
     "copy-to-clipboard": "^3.3.3",
+    "date-fns": "^3.3.1",
     "force-graph": "^1.43.5",
     "ky": "^1.2.0",
     "neo4j-driver": "^5.17.0",
     "openai": "^4.28.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-force-graph": "^1.44.3",
+    "react-query": "^3.39.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "zod": "^3.22.4",
-    "zod-to-json-schema": "^3.22.4"
+    "zod-to-json-schema": "^3.22.4",
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
     "daisyui": "^4.7.2"
