--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.30.1",
     "@astrojs/check": "^0.5.4",
     "@astrojs/react": "^3.0.10",
     "@astrojs/tailwind": "^5.1.0",
@@ -20,6 +21,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.4.0",
     "copy-to-clipboard": "^3.3.3",
+    "d3-force": "^3.0.0",
     "date-fns": "^3.3.1",
     "force-graph": "^1.43.5",
     "ky": "^1.2.0",
@@ -36,6 +38,7 @@
     "zustand": "^3.7.1"
   },
   "devDependencies": {
+    "@types/d3-force": "^3.0.10",
     "daisyui": "^4.7.2"
   }
 }
