--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "d3-force": "^3.0.0",
     "date-fns": "^3.3.1",
     "force-graph": "^1.43.5",
+    "framer-motion": "^11.11.9",
     "ky": "^1.2.0",
     "neo4j-driver": "^5.17.0",
     "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-force-graph": "^1.44.3",
+    "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
