--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.4.0",
+    "canvas-confetti": "^1.9.3",
     "copy-to-clipboard": "^3.3.3",
     "d3-force": "^3.0.0",
     "date-fns": "^3.3.1",
@@ -40,6 +41,7 @@
     "zustand": "^3.7.1"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/d3-force": "^3.0.10",
     "daisyui": "^4.7.2"
   }
